# refx

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/md/: doc.md
docs/md/cookbook/: areo_angles.md  imu_comp.md  main.md  relative_to_global.md
src/: CMakeLists.txt
src/include/refx/: frames.h  geometry.h  math.h  models.h  refx.h  transformations.h
src/include/refx/frames/: axis.h  frames.h  tags.h
src/include/refx/frames/internal/: frame_validators.h  traits.h  validators.h
src/include/refx/geometry/: coordinate.h  rotations.h  transformation.h  vector.h
src/include/refx/geometry/internal/: euler_base.h  operators.h  rotations.hpp  traits.h  vector_base.h
src/include/refx/math/: angles.h
src/include/refx/models/earth_model/: earth_model.h
src/include/refx/models/earth_model/internal/: earth_model.hpp
src/include/refx/models/gravity_model/: gravity_model.h
src/include/refx/models/gravity_model/internal/: gravity_model.hpp
src/include/refx/models/magnetic_model/: magnetic_model.h
src/include/refx/models/reference_ellipsoid/: reference_ellipsoid.h
src/include/refx/transformations/: convert.h  transform.h
src/include/refx/transformations/internal/: canonical_frames.h  frame_converter.hpp  frame_transformer.hpp  geocentric_transformer.hpp  local_tangent_transformer.hpp  shuffler_helper.hpp
test/: CMakeLists.txt  test_example.cpp
test/doc_test_code/: main.cpp
test/doc_test_code/include/: cookbook.h  customization.h  getting_started.h  my_robot_frames.h  my_robot_vectors.h
test/include/: tol.h
test/include/geometry/: test_rotation.hpp  test_transformation.hpp  test_vector_coordinate.hpp  test_vector_operations.hpp
test/include/models/: test_models.hpp
test/include/transformations/: test_transformations.hpp
